# Mutant

./: .env.example  .gitignore  README.md  Run Mutant.bat  Run WeiSiong.command  desktop_app.py  main.py  pyproject.toml  weisiong-desktop.spec
api/: chat_routes.py  dependencies.py  routes.py  schemas.py  websocket.py
cache/: bucketed.py  cache_manager.py
cache/backends/: disk_cache.py  memory_cache.py  redis_cache.py
chat/: chat_handler.py  chat_models.py
config/: settings.py
core/: agent_base.py  agent_pool.py  chunker_strategy.py  codegen_agent.py  orchestrator.py  pipeline.py  progress.py  review_agent.py  worker_agent.py
db/: code_versions.py  engine.py  models.py  rules.py
excel/: models.py  reader.py  writer.py
execution_service/: sandbox.py
feedback/: code_updater.py  question_generator.py  report_aggregator.py  rule_updater.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  types.ts
llm/: azure_openai_provider.py  claude_provider.py  errors.py  factory.py  provider.py  rate_limiter.py
models/: enums.py  messages.py  results.py
runtime/: __init__.py  bootstrap.py  job_runner.py  local_redis.py  paths.py
static/: index.html
steps/: 1.md  2.md  3.md  4.md  5.md  6.md  step1_logic.py  step2_logic.py  step3_logic.py  step4_logic.py  step5_logic.py  step6_logic.py
storage/: azure_blob.py  backend.py  factory.py  local.py  s3.py
tasks/: broker.py  process_job.py  resume_job.py
tests/: test_chat_handler.py  test_main_startup.py  test_orchestrator.py
utils/: logging.py  retry.py
(+21 files in other folders)
